--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,61 @@
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.Main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
+.Records {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 70%;
+}
+
+.Cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+    border-radius: 5px;
+    margin-bottom: 1em;
+    background-color: #292929;
+}
+
+.VinylItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 20em;
+    max-height: auto;
+    border: solid #292929;
+    border-radius: 5px;
+    margin-bottom: 1em;
+    padding-bottom: 1em;
+}
+
+#img {
+    width: 20em;
+    height: 20em;
+}
+
+#header-text {
+    text-align: center;
+    margin-bottom: 0;
+}
+
+#body-text {
+    line-height: 0.5em;
+}
+
+#light-text {
+    color: white;
+}
