--- a/src/App.css
+++ b/src/App.css
@@ -23,15 +23,18 @@
 .Side {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 30%;
+    align-items: flex-start;
+    width: 15%;
     border-radius: 5px;
     margin-bottom: 1em;
+    margin-left: 5em;
+    padding-left: 2em;
+    padding-right: 2em;
     background-color: #292929;
 }
 
 .Side-Subsect {
-    text-align: center;
+    text-align: left;
 }
 
 .VinylItem {
