--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    min-width: 80%;
     margin-left: 3em;
     margin-right: 3em;
 }
